<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- Launch fragment -->
    <string name="upcoming_elections_button_text">Upcoming Elections</string>
    <string name="find_representatives_button_text">Find my Representatives</string>
    <string name="app_name">Political Preparedness</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="state">State</string>
    <string name="find_representatives">Find my representatives</string>
    <string name="use_location">Use my location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="upcoming_elections_label_text">Upcoming Elections</string>
    <string name="saved_elections_label_text">Saved Elections</string>
    <string name="election_information">Election Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>

</resources>
