<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.view.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_medium"
        app:layoutDescription="@xml/representative_motion_scene">

        <TextView
            android:id="@+id/title_textView"
            style="@style/UiHeading1"
            android:text="@string/representative_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address_line_1_editText"
            style="@style/UiEditText"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:hint="@string/address_line_1"
            android:text="@{viewModel.address.line1}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_textView" />

        <EditText
            android:id="@+id/address_line_2_editText"
            style="@style/UiEditText"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:hint="@string/address_line_2"
            android:text="@{viewModel.address.line2}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1_editText" />

        <EditText
            android:id="@+id/city_editText"
            style="@style/UiEditText"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:hint="@string/city"
            android:text="@{viewModel.address.city}"
            app:layout_constraintEnd_toStartOf="@id/state_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2_editText" />

        <Spinner
            android:id="@+id/state_spinner"
            style="@style/RepresentativeState"
            stateValue="@{viewModel.address.state}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city_editText"
            app:layout_constraintTop_toTopOf="@id/city_editText" />

        <EditText
            android:id="@+id/zipcode_editText"
            style="@style/UiEditText"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:hint="@string/zipcode"
            android:inputType="number"
            android:maxLength="5"
            android:text="@{viewModel.address.zip}"
            app:layout_constraintEnd_toEndOf="@id/city_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city_editText" />

        <Button
            android:id="@+id/search_button"
            style="@style/UiButtonPrimary"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:text="@string/find_representatives"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zipcode_editText" />

        <Button
            android:id="@+id/use_location_button"
            style="@style/UiButtonPrimary"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:text="@string/use_location"
            app:layout_constraintEnd_toEndOf="@id/search_button"
            app:layout_constraintStart_toStartOf="@id/search_button"
            app:layout_constraintTop_toBottomOf="@id/search_button" />

        <TextView
            android:id="@+id/my_representatives_title_textView"
            style="@style/UiHeading1"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:text="@string/my_representatives"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/use_location_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_representatives_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_xsmall"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_representatives_title_textView" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>